# sebastian-cpp-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  print_versions.sh
myproject/apps/: CMakeLists.txt  example_hello.cpp
myproject/libs/: CMakeLists.txt
myproject/libs/hello_lib/: CMakeLists.txt
myproject/libs/hello_lib/src/: hello.cpp
myproject/libs/hello_lib/tests/: test_hello.cpp
